高校创建查询接口
