# dfu-service/src/main/java/cn/gatesma/desirefu/domain/api/generate/AddCollegeData.java
@@ -1,7 +1,6 @@
 package cn.gatesma.desirefu.domain.api.generate;
 
 import java.util.Objects;
-import cn.gatesma.desirefu.domain.api.generate.ReturnCode;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonCreator;
 import io.swagger.annotations.ApiModel;
@@ -12,32 +11,32 @@ import javax.validation.Valid;
 import javax.validation.constraints.*;
 
 /**
- * HelloRet
+ * AddCollegeData
  */
 @Validated
-public class HelloRet extends ReturnCode implements Serializable {
+public class AddCollegeData  implements Serializable {
   private static final long serialVersionUID = 1L;
 
-  @JsonProperty("data")
-  private String data = null;
+  @JsonProperty("college_id")
+  private Integer collegeId = null;
 
-  public HelloRet data(String data) {
-    this.data = data;
+  public AddCollegeData collegeId(Integer collegeId) {
+    this.collegeId = collegeId;
     return this;
   }
 
   /**
-   * 返回字符串
-   * @return data
+   * 学校ID
+   * @return collegeId
   **/
-  @ApiModelProperty(value = "返回字符串")
+  @ApiModelProperty(example = "2211", value = "学校ID")
 
-  public String getData() {
-    return data;
+  public Integer getCollegeId() {
+    return collegeId;
   }
 
-  public void setData(String data) {
-    this.data = data;
+  public void setCollegeId(Integer collegeId) {
+    this.collegeId = collegeId;
   }
 
 
@@ -49,22 +48,21 @@ public class HelloRet extends ReturnCode implements Serializable {
     if (o == null || getClass() != o.getClass()) {
       return false;
     }
-    HelloRet helloRet = (HelloRet) o;
-    return Objects.equals(this.data, helloRet.data) &&
-        super.equals(o);
+    AddCollegeData addCollegeData = (AddCollegeData) o;
+    return Objects.equals(this.collegeId, addCollegeData.collegeId);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(data, super.hashCode());
+    return Objects.hash(collegeId);
   }
 
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
-    sb.append("class HelloRet {\n");
-    sb.append("    ").append(toIndentedString(super.toString())).append("\n");
-    sb.append("    data: ").append(toIndentedString(data)).append("\n");
+    sb.append("class AddCollegeData {\n");
+    
+    sb.append("    collegeId: ").append(toIndentedString(collegeId)).append("\n");
     sb.append("}");
     return sb.toString();
   }
