# dfu-service/src/main/java/cn/gatesma/desirefu/domain/api/generate/AddCollegeRet.java
@@ -1,6 +1,7 @@
 package cn.gatesma.desirefu.domain.api.generate;
 
 import java.util.Objects;
+import cn.gatesma.desirefu.domain.api.generate.AddCollegeData;
 import cn.gatesma.desirefu.domain.api.generate.ReturnCode;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.annotation.JsonCreator;
@@ -12,31 +13,32 @@ import javax.validation.Valid;
 import javax.validation.constraints.*;
 
 /**
- * HelloRet
+ * AddCollegeRet
  */
 @Validated
-public class HelloRet extends ReturnCode implements Serializable {
+public class AddCollegeRet extends ReturnCode implements Serializable {
   private static final long serialVersionUID = 1L;
 
   @JsonProperty("data")
-  private String data = null;
+  private AddCollegeData data = null;
 
-  public HelloRet data(String data) {
+  public AddCollegeRet data(AddCollegeData data) {
     this.data = data;
     return this;
   }
 
   /**
-   * 返回字符串
+   * Get data
    * @return data
   **/
-  @ApiModelProperty(value = "返回字符串")
+  @ApiModelProperty(value = "")
 
-  public String getData() {
+  @Valid
+  public AddCollegeData getData() {
     return data;
   }
 
-  public void setData(String data) {
+  public void setData(AddCollegeData data) {
     this.data = data;
   }
 
@@ -49,8 +51,8 @@ public class HelloRet extends ReturnCode implements Serializable {
     if (o == null || getClass() != o.getClass()) {
       return false;
     }
-    HelloRet helloRet = (HelloRet) o;
-    return Objects.equals(this.data, helloRet.data) &&
+    AddCollegeRet addCollegeRet = (AddCollegeRet) o;
+    return Objects.equals(this.data, addCollegeRet.data) &&
         super.equals(o);
   }
 
@@ -62,7 +64,7 @@ public class HelloRet extends ReturnCode implements Serializable {
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
-    sb.append("class HelloRet {\n");
+    sb.append("class AddCollegeRet {\n");
     sb.append("    ").append(toIndentedString(super.toString())).append("\n");
     sb.append("    data: ").append(toIndentedString(data)).append("\n");
     sb.append("}");
